--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,31 +18,46 @@ and open the template in the editor.
         <script src="js/libs/underscore.js/underscore.js"></script>
         <script src="code.js"></script>
         <div id="draggable">
-            <h3>Turtle Code</h3>
+            <span id="hidecode">┾</span>
+            <h3 id="codetitle">Turtle Code</h3>
             <form action="save" method="post">
             <textarea name=code id="code">
-clear()
-c('rgba(255,0,0,0.5)')
-function ngon(sides,size) {
-	for (i in _.range(sides)) {
-		f(size/sides)
-		r(360/sides)
-	}
-}
-speed(0)
-function blossom(size) {
-  for (i in range(720)) {
-    var s = Math.abs(Math.sin(i/180*PI)*size)
-    ngon(5,s)
-    r(1.5)
-  } 
-}
-loop = function() {
-   fade(0.8)
-   blossom(1000)
-   r(2)
+clear() //makes the screen black
+center() //centers the turtle
+c('rgba(255,255,0,0.5)') //Sets the color
+c() //Sets a random color
+fade(0.1) //fade(x) fades the screen by x
+
+function triangle(size) {
+ for (i in range(3)) {
+   f(size) //f(x) moves forward
+   r(120)   //r(x) and l(x) turn left and right by x degrees respectively
+ }
 }
 
+speed(1000) //this means lines are drawn 1000 pixels a second
+            //but individual commands are executed 10ms apart
+
+speed(0)    //speed(0) means instant drawing
+
+x = 0
+loop = function() {
+  for(i in range(3)) {
+    triangle(50 + Math.cos(x/30)*100)
+    r(60)
+  }
+  r(2*Math.cos(x/100))
+  x += 1
+  u() //lifts the pen
+  f(500*Math.cos(x/100))
+  d() //lowers the pen
+  if(x % 250 === 0) {
+    fade(0.9)
+    c()
+  }
+}
+
+//Here is a hackish way to do a main loop
 if (typeof LOOP !== "undefined")
   clearInterval(LOOP)
 LOOP = setInterval(loop,20)
