GitHub link added

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,6 +19,7 @@ and open the template in the editor.
         <script src="code.js"></script>
         <div id="draggable">
             <span id="hidecode">┾</span>
+            <a id="ghlink" href="https://github.com/ahathoor/kilppari">GitHub</a>
             <h3 id="codetitle">Turtle Code</h3>
             <form action="save" method="post">
             <textarea name=code id="code">
